--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>websit(dont expect it to be good)</h1>
+<p>Discord tag: DaC#9489</p>
+
 
 </body>
 </html>
