--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+<boyd background="https://www.google.com/url?sa=i&url=https%3A%2F%2Fgiphy.com%2Fexplore%2Fseamless-background&psig=AOvVaw1juEGQpW7f6wsUmI3agD9C&ust=1636086318100000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCJCvktHu_fMCFQAAAAAdAAAAABAP">
 <h1>websit(dont expect it to be good)</h1>
 <p>Discord tag: DaC#9489</p>
 
