--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <h1>websit(dont expect it to be good)</h1>
 <p>Discord tag: DaC#9489</p>
 
-<body style = "background: url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fgiphy.com%2Fexplore%2Fseamless-background&psig=AOvVaw1juEGQpW7f6wsUmI3agD9C&ust=1636086318100000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCJCvktHu_fMCFQAAAAAdAAAAABAP) ; background-size: 100% 100%;">
+<body style = "background: url(https://y31uv4ra1.vo.llnwd.net/content/wp/tweaklibrary_com/uploads/2020/05/How-to-Use-Animated-GIF-1.gif) ; background-size: 100% 100%;">
 </body>
 </html>
