--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <h1>websit(dont expect it to be good)</h1>
 <p>Discord tag: DaC#9489</p>
 
-<body style = "background: url(https://y31uv4ra1.vo.llnwd.net/content/wp/tweaklibrary_com/uploads/2020/05/How-to-Use-Animated-GIF-1.gif) ; background-size: 100% 100%;">
+  <style>
+    body{
+      background: grey;
+      color: white;
+    }
+  </style>
+  
 </body>
 </html>
