--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <body>
 <h1>websit(dont expect it to be good)</h1>
 <p>Discord tag: DaC#9489</p>
+  
+  <p>Primary YouTube Channel: </p> <a href="https://youtube.com/channel/UCgdSEtOgoN6IwowLvv9ubrA"> here </a>
+  <p>Secondary YouTube Channel: </p>
 
   <style>
     body{
