--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>websit(dont expect it to be good)</h1>
 <p>Discord tag: DaC#9489</p>
   
-  <p>Primary YouTube Channel: </p> <a href="https://youtube.com/channel/UCgdSEtOgoN6IwowLvv9ubrA"> here </a>
+  <p>Primary YouTube Channel: <a href="https://youtube.com/channel/UCgdSEtOgoN6IwowLvv9ubrA"> here </a> </p>
   <p>Secondary YouTube Channel: </p>
 
   <style>
