--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <p>Discord tag: DaC#9489</p>
   
   <p>Primary YouTube Channel: <a href="https://youtube.com/channel/UCgdSEtOgoN6IwowLvv9ubrA"> here </a> </p>
-  <p>Secondary YouTube Channel: </p>
+  <p>Secondary YouTube Channel: <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> here </a> </p>
 
   <style>
     body{
