--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
   <style>
     body{
-      background: grey;
-      color: white;
+      background: rgb(240, 152, 152);
+      color: rgb(255, 255, 255);
     }
   </style>
   
