--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <p>Primary YouTube Channel: <a href="https://youtube.com/channel/UCgdSEtOgoN6IwowLvv9ubrA"> here </a> </p>
   <p>Secondary YouTube Channel: <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> here </a> </p>
   <p>this website is dissapointing like my life</p>
+  <h1>Contacts:</h1>
+
+  <p>Business E-Mail: </p>
   <style>
     body{
       background: rgb(240, 152, 152);
