--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1>websit(dont expect it to be good)</h1>
 <p>Discord tag: DaC#9489</p>
-  
+  <p>GitHub Profile <a href="https://github.com/DaC9489">Link</a></p>
   <p>Primary YouTube Channel: <a href="https://youtube.com/channel/UCgdSEtOgoN6IwowLvv9ubrA"> here </a> </p>
   <p>Secondary YouTube Channel: <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> here </a> </p>
   <p>this website is dissapointing like my life</p>
