--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <p>this website is dissapointing like my life</p>
   <h1>Contacts:</h1>
 
-  <p>Business E-Mail: </p>
+  <p>Business E-Mail: business.dac9489@gmail.com</p>
   <style>
     body{
       background: rgb(240, 152, 152);
