--- a/index.html
+++ b/index.html
@@ -1,7 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Proxy</title>
+    <style>
+        /* internal css */
+    </style>
+    <link rel="stylesheet" href="./css/main.css">
+</head>
+
 <body>
-<h1>websit(dont expect it to be good)</h1>
+    <!-- Nav -->
+    <header>
+        <div class="container">
+            <a href="/index.html"><img src="/Site Image.png" alt="/site image" width="250" class="logo" id="top"></a>
+            <nav>
+                <ul>
+                    <li> <a href="/Option4.html">Option 4 </a> </li>
+                    <li> <a href="/Option3">Option 3</a> </li>
+                    <li> <a href="/Option2.html">Option 2</a> </li>
+                    <li> <a href="/Option1.html">Option 1 </a> </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <!-- Nav -->
+
+    <!-- Text area -->
+    <h1 class="front" id="name">
+        <center>Deine Mutter
+    </h1>
+    <h1>websit(dont expect it to be good)</h1>
 <p>Discord tag: DaC#9489</p>
   <p>GitHub Profile <a href="https://github.com/DaC9489">Link</a></p>
   <p>Primary YouTube Channel: <a href="https://youtube.com/channel/UCgdSEtOgoN6IwowLvv9ubrA"> here </a> </p>
@@ -10,12 +42,26 @@
   <h1>Contacts:</h1>
 
   <p>Business E-Mail: business.dac9489@gmail.com</p>
-  <style>
-    body{
-      background: rgb(240, 152, 152);
-      color: rgb(255, 255, 255);
-    }
-  </style>
-  
+    <!-- End of Text -->
+
+    <!-- Picture area -->
+    <!-- <img src="/images/morgsmom.png" alt="Morgs Mom"width="474" height="268"id="bigpic"> -->
+    <!-- this might be what its based on lol -->
+    </center>
+    <!-- End of Pictures -->
+
+
+    <center><a href="#top" class="bottom" id="top">Back To Top</a>
+        <p class="bottom" class="copyright-container" >Copyright &copy; 2021 By YourMother#001</p>
+    </center>
 </body>
+
 </html>
+<!--        Tips
+<a href="url" target="_blank"> to open in a new tab
+you can use <sup>For links to hover up</sup> and <sub>To sink</sub> 
+<em> Is used for emphesis </>
+<strong> Is used for Bold </strong>
+type lorem10 for 10 works etc..
+you can use &signname; for special characters
+ -->
