--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Nav -->
     <header>
         <div class="container">
-            <a href="/index.html"><img src="/Site Image.png" alt="/site image" width="250" class="logo" id="top"></a>
+            <a href="/index.html"><img src="/Site Image.png" alt="site image" width="250" class="logo" id="top"></a>
             <nav>
                 <ul>
                     <li> <a href="/Option4.html">Option 4 </a> </li>
@@ -31,9 +31,8 @@
 
     <!-- Text area -->
     <h1 class="front" id="name">
-        <center>Deine Mutter
-    </h1>
-    <h1>websit(dont expect it to be good)</h1>
+        <center>Deine Mutter</center>
+            </h1>
 <p>Discord tag: DaC#9489</p>
   <p>GitHub Profile <a href="https://github.com/DaC9489">Link</a></p>
   <p>Primary YouTube Channel: <a href="https://youtube.com/channel/UCgdSEtOgoN6IwowLvv9ubrA"> here </a> </p>
