--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li> <a href="/Option4.html">Option 4 </a> </li>
                     <li> <a href="/Option3">Option 3</a> </li>
                     <li> <a href="/Option2.html">Option 2</a> </li>
-                    <li> <a href="/Option1.html">Option 1 </a> </li>
+                    <li> <a href="/used/contact.html">Contact Me</a> </li>
                 </ul>
             </nav>
         </div>
