--- a/used/contact.html
+++ b/used/contact.html
@@ -9,7 +9,7 @@
     <style>
         /* internal css */
     </style>
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
