--- a/index.html
+++ b/index.html
@@ -32,15 +32,8 @@
     <!-- Text area -->
     <h1 class="front" id="name">
         <center>Deine Mutter</center>
-            </h1>
-<p>Discord tag: DaC#9489</p>
-  <p>GitHub Profile <a href="https://github.com/DaC9489">Link</a></p>
-  <p>Primary YouTube Channel: <a href="https://youtube.com/channel/UCgdSEtOgoN6IwowLvv9ubrA"> here </a> </p>
-  <p>Secondary YouTube Channel: <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> here </a> </p>
-  <p>this website is dissapointing like my life</p>
-  <h1>Contacts:</h1>
-
-  <p>Business E-Mail: business.dac9489@gmail.com</p>
+          <p> You can Contact from the Contacts tab or from <a href="/used/contact.html"Pressing this> </p>
+              
     <!-- End of Text -->
 
     <!-- Picture area -->
