--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- Text area -->
     <h1 class="front" id="name">
         <center>Deine Mutter</center>
-          <p> You can Contact from the Contacts tab or from <a href="/used/contact.html"Pressing this> </p>
+          <p> You can Contact from the Contacts tab or from <a href="/used/contact.html">Pressing this </a></p>
               
     <!-- End of Text -->
 
