--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <ul>
                     <li> <a href="/Option4.html">Option 4 </a> </li>
                     <li> <a href="/Option3">Option 3</a> </li>
-                    <li> <a href="/Option2.html">Option 2</a> </li>
+                    <li> <a href="/discordsvrs.html">Option 2</a> </li>
                     <li> <a href="/used/contact.html">Contact Me</a> </li>
                 </ul>
             </nav>
@@ -44,7 +44,7 @@
 
 
     <center><a href="#top" class="bottom" id="top">Back To Top</a>
-        <p class="bottom" class="copyright-container" >Copyright &copy; 2021 By YourMother#001</p>
+        <p class="bottom" class="copyright-container" >Copyright &copy; Tempelate By YourMother#001</p>
     </center>
 </body>
 
