--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
     <center><a href="#top" class="bottom" id="top">Back To Top</a>
-        <p class="bottom" class="copyright-container" >Copyright &copy; Tempelate By YourMother#001</p>
+        <p class="bottom" class="copyright-container" >Copyright &copy; Tempelate By YourMother#0001 & Tons Of Help By YourMother#0001</p>
     </center>
 </body>
 
