--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A Nice Project That Dac And YourMother#0001 are working on!">
+    <meta content="https://giphy.com/embed/Vuw9m5wXviFIQ" property="og:image" />
+    <link rel="icon" href="https://giphy.com/embed/Vuw9m5wXviFIQ">
     <title>DaC</title>
     <style>
         /* internal css */
