--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <ul>
                     <li> <a href="/Option4.html">Option 4 </a> </li>
                     <li> <a href="/Option3">Option 3</a> </li>
-                    <li> <a href="/discordsvrs.html">Option 2</a> </li>
+                    <li> <a href="/used/discordsvrs.html">Discord Servers</a> </li>
                     <li> <a href="/used/contact.html">Contact Me</a> </li>
                 </ul>
             </nav>
