--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="A Nice Project That Dac And YourMother#0001 are working on!">
     <meta content="https://giphy.com/embed/Vuw9m5wXviFIQ" property="og:image" />
     
-    <title>DaC</title>
+    <title>DaC's Site</title>
     <style>
         /* internal css */
     </style>
