--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <ul>
                     <li> <a href="/Option4.html">Option 4 </a> </li>
                     <li> <a href="/Option3">Option 3</a> </li>
-                    <li> <a href="/used/discordsvrs.html">Discord Servers</a> </li>
-                    <li> <a href="/used/contact.html">Contact Me</a> </li>
+                    <li> <a href="/used/discordsvrs">Discord Servers</a> </li>
+                    <li> <a href="/used/contact">Contact Me</a> </li>
                 </ul>
             </nav>
         </div>
