--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Nav -->
     <header>
         <div class="container">
-            <a href="/index"><img src="/Site Image.png" alt="DaC's Site" width="250" class="logo" id="top"></a>
+            <a href="/index"><img src="/2D2CFF1D-E631-4C65-9A5C-83E5EB2BA8AF.png" alt="DaC's Site" width="250" class="logo" id="top"></a>
             <nav>
                 <ul>
                     <li> <a href="/Option4.html">Option 4 </a> </li>
