--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- Text area -->
     <h1 class="front" id="name">
-        <center>Deine Mutter</center>
+        <center>DaC's Site</center>
           <p> You can Contact from the Contacts tab or from <a href="/used/contact.html">Pressing this </a></p>
               
     <!-- End of Text -->
