--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <nav>
                 <ul>
                     <li> <a href="/Option4.html">Option 4 </a> </li>
-                    <li> <a href="/Option3">Option 3</a> </li>
+                    <li> <a href="/used/other">Other</a> </li>
                     <li> <a href="/used/discordsvrs">Discord Servers</a> </li>
                     <li> <a href="/used/contact">Contact Me</a> </li>
                 </ul>
