--- a/used/contact.html
+++ b/used/contact.html
@@ -21,8 +21,8 @@
                 <ul>
                     <li> <a href="/Option4.html">Option 4 </a> </li>
                     <li> <a href="/Option3">Option 3</a> </li>
-                    <li> <a href="/Option2.html">Option 2</a> </li>
-                    <li> <a href="/used/contact.html">Option 1 </a> </li>
+                    <li> <a href="/used/discordsvrs">Discord Servers</a> </li>
+                    <li> <a href="/used/contact">Contact Me</a> </li>
                 </ul>
             </nav>
         </div>
