--- a/used/contact.html
+++ b/used/contact.html
@@ -19,8 +19,8 @@
             <a href="/index.html"><img src="/Site Image.png" alt="site image" width="250" class="logo" id="top"></a>
             <nav>
                 <ul>
-                    <li> <a href="/Option4.html">Option 4 </a> </li>
-                    <li> <a href="/Option3">Option 3</a> </li>
+                   <li> <a href="/Option4.html">Option 4 </a> </li>
+                    <li> <a href="/used/Other1">Other</a> </li>
                     <li> <a href="/used/discordsvrs">Discord Servers</a> </li>
                     <li> <a href="/used/contact">Contact Me</a> </li>
                 </ul>
