--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Text area -->
     <h1 class="front" id="name">
         <center>DaC's Site</center>
-          <p> You can Contact from the Contacts tab or from <a href="/used/contact.html">Pressing this </a></p>
+          <p> You can Contact from the Contacts tab or from <a href="/used/contact">Pressing this </a></p>
               
     <!-- End of Text -->
 
