--- a/used/contact.html
+++ b/used/contact.html
@@ -34,7 +34,7 @@
         <center>Contact</center>
            
   
-  <center> <p>Discord: DaC#9489 or YourMother#0001</p><br>
+  <center> <p>Discord: DaC#9489 | [Helper] YourMother#0001</p><br>
   <p>GitHub Profile <a href="https://github.com/DaC9489">Link</a></p><br>
   <p>Primary YouTube Channel: <a href="https://youtube.com/channel/UCgdSEtOgoN6IwowLvv9ubrA"> here </a> </p> <br>
   <p>Secondary YouTube Channel: <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> here </a> </p><br>
