--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="https://giphy.com/embed/Vuw9m5wXviFIQ">
+    <link rel="icon" href="/2D2CFF1D-E631-4C65-9A5C-83E5EB2BA8AF.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
