--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <h1 class="front" id="name">
         <center>DaC's Site</center>
           <p> You can Contact from the Contacts tab or from <a href="/used/contact">Pressing this </a></p>
-        <p> GitHub <a href="https://github.com/DaC9489/DaC9489.github.io">Project</a> </p>
+        <p> GitHub Project: <a href="https://github.com/DaC9489/DaC9489.github.io">here</a> </p>
               
     <!-- End of Text -->
 
