--- a/used/games.html
+++ b/used/games.html
@@ -1,1 +1,56 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact - DaC's Site</title>
+    <style>
+        /* internal css */
+    </style>
+    <link rel="stylesheet" href="/css/main.css">
+</head>
+
+<body>
+    <!-- Nav -->
+    <header>
+        <div class="container">
+            <a href="/index"><img src="/2D2CFF1D-E631-4C65-9A5C-83E5EB2BA8AF.png" alt="DaC's Site" width="250" class="logo" id="top"></a>
+            <nav>
+                <ul>
+                   <li> <a href="/used/games">Games</a> </li>
+                    <li> <a href="/used/Other1">Other</a> </li>
+                    <li> <a href="/used/discordsvrs">Discord Servers</a> </li>
+                    <li> <a href="/used/contact">Contact Me</a> </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <!-- Nav -->
+
+    <!-- Text area -->
+    <h1 class="front" id="name">
+        <center>Games:</center>
+      
+  <img src="https://frivwtf.com/images/friday-night-funkin.jpg" alt="friday night funkin' image">
+  <p>Friday Night Funkin': <a href="/games/fnf"> PLAY </a> </p> <br>
+  <img src="https://img.itch.zone/aW1hZ2UvMTE4Njc4LzU0Nzg0Mi5wbmc=/315x250%23c/iyd%2B6r.png" alt="drift hunters image">
+  <p>DriftHunters: <a href="/games/drift">PLAY </a> </p><br>
+  
+
+    <!-- End of Text -->
+
+    <!-- Picture area -->
+    <!-- <img src="/images/morgsmom.png" alt="Morgs Mom"width="474" height="268"id="bigpic"> -->
+    <!-- this might be what its based on lol -->
+    </center>
+    <!-- End of Pictures -->
+
+
+    <center><a href="#top" class="bottom" id="top">Back To Top</a>
+        <p class="bottom" class="copyright-container" >Copyright &copy; Tempelate By YourMother#0001 & Tons Of Help By YourMother#0001</p>
+    </center>
+</body>
+
+</html>
