--- a/used/games.html
+++ b/used/games.html
@@ -37,7 +37,8 @@
   <p>Friday Night Funkin': <a href="/games/fnf"> PLAY </a> </p> <br>
   <img src="https://img.itch.zone/aW1hZ2UvMTE4Njc4LzU0Nzg0Mi5wbmc=/315x250%23c/iyd%2B6r.png" alt="drift hunters image">
   <p>DriftHunters: <a href="/games/drift">PLAY </a> </p><br>
-  
+  <img src="https://img.itch.zone/aW1nLzI1ODYzNjEucG5n/315x250%23c/62dU0i.png" alt="Tanuki Sunset Classic Image">
+  <p>Tanuki Sunset Classic: <a href="/games/tanuki">PLAY </a> </p><br>
 
     <!-- End of Text -->
 
