--- a/games/drift.html
+++ b/games/drift.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - DaC's Site</title>
+    <title>Game - DaC's Site</title>
     <style>
         /* internal css */
     </style>
@@ -19,7 +19,7 @@
             <a href="/index"><img src="/2D2CFF1D-E631-4C65-9A5C-83E5EB2BA8AF.png" alt="DaC's Site" width="250" class="logo" id="top"></a>
             <nav>
                 <ul>
-                   <li> <a href="/Option4.html">Option 4 </a> </li>
+                   <li> <a href="/used/games">Games </a> </li>
                     <li> <a href="/used/Other1">Other</a> </li>
                     <li> <a href="/used/discordsvrs">Discord Servers</a> </li>
                     <li> <a href="/used/contact">Contact Me</a> </li>
@@ -32,7 +32,7 @@
     <!-- Text area -->
     <h1 class="front" id="name">
   
-   <div id="html_embed_widget_97302" class="html_embed_widget embed_wrapper"><div data-height="680" data-width="980" class="game_frame game_loaded" style="width: 980px; height: 680px"><iframe mozallowfullscreen="true" allow="autoplay; fullscreen *; geolocation; microphone; camera; midi; monetization; xr-spatial-tracking; gamepad; gyroscope; accelerometer; xr" frameborder="0" src="//v6p9d9t4.ssl.hwcdn.net/html/1792221/ItchIO/index.html?v=1574649458" msallowfullscreen="true" scrolling="no" allowfullscreen="true" webkitallowfullscreen="true" id="game_drop" allowtransparency="true" width="1300" height="750"></iframe></div></div>
+   <center> <div id="html_embed_widget_97302" class="html_embed_widget embed_wrapper"><div data-height="680" data-width="980" class="game_frame game_loaded" style="width: 980px; height: 680px"><iframe mozallowfullscreen="true" allow="autoplay; fullscreen *; geolocation; microphone; camera; midi; monetization; xr-spatial-tracking; gamepad; gyroscope; accelerometer; xr" frameborder="0" src="//v6p9d9t4.ssl.hwcdn.net/html/1792221/ItchIO/index.html?v=1574649458" msallowfullscreen="true" scrolling="no" allowfullscreen="true" webkitallowfullscreen="true" id="game_drop" allowtransparency="true" width="1300" height="750"></iframe></div></div> </center>
 
 
   <p>Business E-Mail: business.dac9489@gmail.com</p> <center<br>
