--- a/used/Other1.html
+++ b/used/Other1.html
@@ -51,7 +51,7 @@
 
 
     <center><a href="#top" class="bottom" id="top">Back To Top</a>
-        <p class="bottom" class="copyright-container" >Copyright &copy; 2021 By YourMother#001</p>
+        <p class="bottom" class="copyright-container" >Copyright &copy; Made By DaC#9489 | Template By YourMother#001</p>
     </center>
 </body>
 
