--- a/used/contact.html
+++ b/used/contact.html
@@ -51,7 +51,7 @@
 
 
     <center><a href="#top" class="bottom" id="top">Back To Top</a>
-        <p class="bottom" class="copyright-container" >Copyright &copy; Tempelate By YourMother#0001 & Tons Of Help By YourMother#0001</p>
+        <p class="bottom" class="copyright-container" >Copyright &copy; Made By DaC#9489 | Tempelate By YourMother#0001 & Tons Of Help By YourMother#0001</p>
     </center>
 </body>
 
