--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <nav>
                 <ul>
                     <li> <a href="/used/games">Games</a> </li>
-                    <li> <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Other</a> </li>
+                    <li> <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">UNUSED TEMP | DONT CLICK</a> </li>
                     <li> <a href="/used/discordsvrs">Discord Servers</a> </li>
                     <li> <a href="/used/contact">Contact Me</a> </li>
                 </ul>
