--- a/used/games.html
+++ b/used/games.html
@@ -39,6 +39,7 @@
   <p>DriftHunters: <a href="/games/drift">PLAY </a> </p><br>
   <img src="https://img.itch.zone/aW1nLzI1ODYzNjEucG5n/315x250%23c/62dU0i.png" alt="Tanuki Sunset Classic Image">
   <p>Tanuki Sunset Classic: <a href="/games/tanuki">PLAY </a> </p><br>
+        <h1>Unblocked Games</h1>
   <p>Space Invaders: <a href="/games/spaceinvaders">PLAY </a> </p><br>
   <p>Space Company: <a href="/games/spacecompany">PLAY </a> </p><br>
   <p>2048: <a href="/games/2048">PLAY </a> </p><br>
