--- a/games/pacman/index.html
+++ b/games/pacman/index.html
@@ -5,7 +5,7 @@
 	<head>
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121647007-2"></script>
+		
 		<script>
 			window.dataLayer = window.dataLayer || [];
 			function gtag(){dataLayer.push(arguments);}
@@ -181,7 +181,7 @@
 			});
 		</script>
 	
-		<title>Lucio PANEPINTO - Pac-Man</title>
+		<title>Pac Man - DaC's Site</title>
 	</head>
 		
 	<body>
