--- a/games/flappybird/index.html
+++ b/games/flappybird/index.html
@@ -34,6 +34,7 @@
     </script>
 </head>
 <body>
+    <p1>note: speed varies on screen refresh rate</p1>
     <script src="https://cdn.jsdelivr.net/gh/BinBashBanana/gstore/html5games/flappybird/__start__.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/BinBashBanana/gstore/html5games/flappybird/__loading__.js"></script>
 </body>
