--- a/games/flappybird/index.html
+++ b/games/flappybird/index.html
@@ -8,7 +8,7 @@
     <meta charset='utf-8'>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/BinBashBanana/gstore/html5games/flappybird/styles.css">
     <style></style>
-    <title>Flappy Bird</title>
+    <title>Flappy Bird - DaC's Site</title>
     <script src="https://cdn.jsdelivr.net/gh/BinBashBanana/gstore/html5games/flappybird/playcanvas-stable.min.js"></script>
     <script>
         ASSET_PREFIX = "https://s3-eu-west-1.amazonaws.com/apps.playcanvas.com/bXj5OWCb/";
