--- a/games/minecraft.html
+++ b/games/minecraft.html
@@ -38,7 +38,7 @@
 Fullscreen</A>
 <br>
 <br>
-        <p>paste this into incognito to play this unblocked: https://eaglercraft-server.iamgarbage101.repl.co</p>
+        <p>paste this into incognito to play this unblocked: <p>Open in newtab: <A HREF="https://play.r404.cf"></p></p>
 <br>
   <p>Business E-Mail: business.dac9489@gmail.com</p> <center<br>
     <!-- End of Text -->
