--- a/games/minecraft.html
+++ b/games/minecraft.html
@@ -34,7 +34,7 @@
   <br>
    <div id="html_embed_widget_97302" class="html_embed_widget embed_wrapper"><div data-height="720" data-width="1280" class="game_frame game_loaded" style="width: 980px; height: 680px"><iframe allowfullscreen mozallowfullscreen="true" allow="autoplay; fullscreen *; geolocation; microphone; camera; midi; monetization; xr-spatial-tracking; gamepad; gyroscope; accelerometer; xr" frameborder="0" src="https://play.r404.cf" msallowfullscreen="true" scrolling="no" allowfullscreen="true" webkitallowfullscreen="true" id="game_drop" allowtransparency="true" width="1300" height="750"></iframe></div></div>
 <br>
-        <p>Open in newtab: </p><A HREF="mc.html">
+        <p>Open in newtab: </p><A HREF="https://play.r404.cf/">
 Fullscreen</A>
 <br>
 <br>
