--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <nav>
                 <ul>
                     <li> <a href="/used/games">Games</a> </li>
-                    <li> <a href="https://use.dacwomginx.cf">Proxy </a> </li>
+                    <li> <a href="/used/proxy">Proxy </a> </li>
                     <li> <a href="/used/discordsvrs">Discord Servers</a> </li>
                     <li> <a href="/used/contact">Contact Me</a> </li>
                 </ul>
