--- a/used/games.html
+++ b/used/games.html
@@ -20,7 +20,7 @@
             <nav>
                 <ul>
                    <li> <a href="/used/games">Games</a> </li>
-                    <li> <a href="/used/Other1">Other</a> </li>
+                    <li> <a href="/used/proxy">Proxy</a> </li>
                     <li> <a href="/used/discordsvrs">Discord Servers</a> </li>
                     <li> <a href="/used/contact">Contact Me</a> </li>
                 </ul>
