--- a/used/contact.html
+++ b/used/contact.html
@@ -19,8 +19,8 @@
             <a href="/index"><img src="/2D2CFF1D-E631-4C65-9A5C-83E5EB2BA8AF.png" alt="DaC's Site" width="250" class="logo" id="top"></a>
             <nav>
                 <ul>
-                   <li> <a href="/games/drift">Games </a> </li>
-                    <li> <a href="/used/Other1">Other</a> </li>
+                    <li> <a href="/used/games">Games</a> </li>
+                    <li> <a href="/used/proxy">Proxy</a> </li>
                     <li> <a href="/used/discordsvrs">Discord Servers</a> </li>
                     <li> <a href="/used/contact">Contact Me</a> </li>
                 </ul>
