--- a/used/Other1.html
+++ b/used/Other1.html
@@ -19,10 +19,10 @@
             <a href="/index.html"><img src="/Site Image.png" alt="site image" width="250" class="logo" id="top"></a>
             <nav>
                 <ul>
-                    <li> <a href="/Option4.html">Option 4 </a> </li>
-                    <li> <a href="/Option3">Option 3</a> </li>
-                    <li> <a href="/Option2.html">Option 2</a> </li>
-                    <li> <a href="/used/contact.html">Option 1 </a> </li>
+                     <li> <a href="/used/games">Games</a> </li>
+                    <li> <a href="/used/proxy">Proxy</a> </li>
+                    <li> <a href="/used/discordsvrs">Discord Servers</a> </li>
+                    <li> <a href="/used/contact">Contact Me</a> </li>
                 </ul>
             </nav>
         </div>
