--- a/used/proxy.html
+++ b/used/proxy.html
@@ -32,7 +32,12 @@
     <!-- Text area -->
     <h1 class="front" id="name">
         <center>Proxys</center></h1>
-     
+     <br>
+    <center><h1>UltraViolet Proxy</h1>
+    <iframe src="https://uv.dacwomginx.cf/" height="500" width="500" title="Iframe UV"></iframe>
+        <br>
+        <h1>Womginx</h1>
+         <iframe src=" https://use.dacwomginx.cf/" height="500" width="500" title="Iframe Womginx"></iframe></center>
     <!-- End of Text -->
 
     <!-- Picture area -->
