--- a/used/proxy.html
+++ b/used/proxy.html
@@ -35,9 +35,7 @@
      <br>
     <center><h1>UltraViolet Proxy</h1>
     <iframe src="https://uv.dacwomginx.cf/" height="900" width="1500" title="Iframe UV"></iframe>
-        <br>
-        <h1>Womginx</h1>
-         <iframe src=" https://use.dacwomginx.cf/" height="900" width="1500" title="Iframe Womginx"></iframe></center>
+        <br></center>
     <!-- End of Text -->
 
     <!-- Picture area -->
